<resources>
    <string name="app_name">Pertemuan9</string>
    <string name="open_google_com">Open Google.com</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="display_contact_list">Display Contact List</string>
    <string name="dial_phone">Dial Phone</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="start_service">Start Service</string>
</resources>